# ARAS-AINM2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  hello.py  pyproject.toml
Research/Tripletex/: AIAccountingAgentRoadmap.md
api/: main.py  schemas.py
logs/: scores_per_task_tripletex.md  task_analysis.md  task_reference.md
notebooks/reports/: dummy_data_report.html
scripts/: eda_report.py  evaluate.py  install_ngrok.sh  setup.sh  start_ngrok.sh
tasks/aastar-island/: basic_cnn_script.py  fetch_data.py
tasks/astar-island/: README.md  astar_island_solve.py  fetch_data.py
tasks/language/: __init__.py  agent.py  classifier.py  factory.py  rag.py
tasks/machine_learning/: __init__.py  baseline.py  feature_engineering.py  neural_network.py
tasks/tripletex/: README.md  __init__.py  files.py  prompts.py  solve.py
tasks/vision/: README.md  __init__.py  augment_with_reference_images.py  check_training.sh  create_submission.sh  create_submission_ensemble.sh  eval_predictions.py  exp1_corrected_only.py  exp2_staged_lr.py  exp3_sahi_tiling.py  exp4_ensemble.py  export_onnx.py  prepare_data.py  preprocessing.py  requirements.txt  run.py  run_ensemble3_tta.py  run_ensemble_tta.py  run_training_chain.sh  run_training_chain2.sh  run_tta.py  segmentation.py  train.py  validate.py  wait_for_training.sh
tests/: test_api.py  test_language.py  test_ml.py  test_tripletex.py  test_vision.py
