[project]
name = "ainm2026"
version = "0.1.0"
description = "Norwegian AI Championship 2026 - DNV base Repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Serving ---
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    # --- Data / Core ML ---
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "joblib>=1.4.0",
    # --- Boosting (fast, competition-grade tabular models) ---
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    # --- Language / LLM ---
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "sentence-transformers>=5.2.3",
    # --- Utilities ---
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "setuptools>=65.0.0,<70.0.0",
    # --- EDA ---
    "sweetviz>=2.3.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
# Install vision extras: pip install -e ".[vision]"
# Requires: apt-get install -y libgl1-mesa-glx libglib2.0-0
vision = [
    "Pillow>=11.0.0",
    "opencv-python-headless>=4.10.0",
    "torchvision>=0.20.0",
    "torch>=2.5.0",
]
# Install dev/test extras: pip install -e ".[dev]"
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tasks", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
